--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "4.14.x",
     "react": "15.3.x",
     "react-dom": "15.3.x",
-    "react-router": "2.6.x"
+    "react-router": "3.x.x"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -28,7 +28,12 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.8",
     "http-server": "0.9.x",
+    "rimraf": "^2.6.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
