--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "startserver": "node_modules/.bin/babel-node --presets react,es2015 src/server.js",
-    "start": "webpack-dev-server"
+    "startdev": "webpack-dev-server",
+    "postinstall": "webpack -p",
+    "start": "node src/server.js"
   },
   "dependencies": {
     "babel-cli": "6.11.x",
