--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "startserver": "node_modules/.bin/babel-node --presets react,es2015 src/server.js",
-    "startdev": "webpack-dev-server",
+    "startdev": "webpack-dev-server --progress --colors --inline",
     "postinstall": "webpack -p",
     "start": "node_modules/.bin/babel-node --presets react,es2015 src/server.js"
   },
