--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "babel-cli": "6.11.x",
     "babel-core": "6.13.x",
+    "babel-loader": "6.2.x",
     "babel-preset-es2015": "6.13.x",
     "babel-preset-react": "6.11.x",
     "ejs": "2.5.x",
     "express": "4.14.x",
-    "react": "15.3.x",
-    "react-dom": "15.3.x",
-    "webpack": "^2.6.1",
-    "babel-loader": "6.2.x",
-    "react-router": "3.x.x"
+    "material-ui": "^0.18.1",
+    "prop-types": "^15.5.10",
+    "react": "15.4.x",
+    "react-dom": "15.4.x",
+    "react-router": "3.x.x",
+    "react-tap-event-plugin": "^2.0.0",
+    "webpack": "^2.6.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
